fix spacing for experience and about

--- a/static/mediaqueries.css
+++ b/static/mediaqueries.css
@@ -46,6 +46,9 @@
     #experience {
         margin-bottom: 5rem;
     }
+    #about {
+        margin-bottom: 5rem;
+    }
 }
 
 @media screen and (max-width: 600px) {
